# sustc-archive

./: .gitignore  README.md
2020f/cs102a/DarkChess/: pom.xml
2021f/cs203/lab1/: E.java  F.java  a.cpp  b.cpp  c.cpp  d.cpp
2021f/cs203/lab10/: A.java  B.java  C.java  D.java  E.java  F.java
2021f/cs203/lab2/: D.java  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp
2021f/cs203/lab3/: C.java  F.java  a.cpp  b.cpp  d.cpp  e.cpp  f.cpp
2021f/cs203/lab4/: B.java  E.java  F.java  a.cpp  c.cpp  d.cpp
2021f/cs203/lab5/: A.java  B.java  C.java  D.java  E.java  F.java
2021f/cs203/lab6/: A.java  B.java  C.java  D.java  E.java  F.java
2021f/cs203/lab7/: E.java  a.cpp  b.cpp  c.cpp  d.cpp  f.cpp
2021f/cs203/lab8/: C.java  D.java  F.java  a.cpp  b.cpp  e.cpp
2021f/cs203/lab9/: A.java  B.java  C.java  D.java  E.java  F.java
2021f/cs203/labz/: C.java  D.java  E.java  H.java  b.cpp  f.cpp  g.cpp
2021f/cs205/: README.md  opencv-with-clion-macos.md
2021f/cs205/project1/: source.cpp
2021f/cs205/project2/src/: CMakeLists.txt  Mat.hpp  Mat.tpp  ThreadPool.hpp  Timer.cpp  Timer.hpp  check.py  util.cpp  util.hpp
2021f/cs205/project3/src/: CMakeLists.txt  benchmark.c  cmat_mul.c  cmat_mul.h  cmatrix.c  cmatrix.h  main.c  util.c  util.h
2021f/cs205/project4/src/: CMakeLists.txt  debug_new.hpp  main.cpp  matexcept.cpp  matexcept.hpp  matrix.hpp  matrix.tpp  smartptr.hpp  util.cpp  util.hpp
2021f/cs207/A1/: distributive1bit_df.v  distributive1bit_sd.v  distributive1bit_sim.v  distributive2bit_df.v  distributive2bit_sd.v  distributive2bit_sim.v  unsigned_addition.v  unsigned_addition_sim.v
2021f/cs307/project2/: config.properties  pom.xml
2022f/cs303/project2/: CARP_solver.py
2022f/cs303/project3/: eval.py  trainer.py
2022f/cs308/: note.md
2022f/cs308/midterm/: gan.py
2022f/cs309/assign1/: .$q1.drawio.bkp  .$q1.drawio.dtmp  .$q2.drawio.bkp  .$q3.drawio.bkp  .$q3.drawio.dtmp
2022f/cs309/assign2/: package.json
2022f/cs309/assign4/: document.md  local-inject.properties  local-value.properties
2022f/cs405/assign1/: HW1_programQuestion.ipynb  oj1.py
2022f/cs405/assign2/: HW2_programQuestion.ipynb  oj3.py
2023s/cle050/: 1~11课复习.pptx  第10周  标准日本语第8课.pptx  第11周  标准日本语第9课.pptx  第12周  标准日本语第10课.pptx  第13周  标准日本语第11课.pptx  第1周  日语入门五十音图1.pptx  第2周  日本語の発音2.pptx  第3周  标准日本语 第1课.pptx  第4周  标准日本语 第2课.pptx  第5周  标准日本语 第3课.pptx  第6周  标准日本语 第4课.pptx  第7周  标准日本语第5课.pptx  第8周  标准日本语第6课.pptx  第9周  标准日本语第7课.pptx
2023s/nus-sws/: README.md
tis-toolbox/capture-course/: README.md  tis.py
tis-toolbox/cousetable/: README.md  main.py  requirements.txt  user.json
tis-utils/capture-course/: user.json
tis-utils/cousetable/: main.py
tis-utils/tis-tracker/: README.md  main.py  user.json
(+521 files in other folders)
